# pyproject

./: .buildinfo  .gitignore  LICENSE  README.md  create_test.sh  doc_build.sh  doc_index.sh  doc_requirements.txt  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.sh
.doctrees/: environment.pickle  index.doctree
.github/workflows/: documentation.yml
_sources/: index.rst.txt
_static/: documentation_options.js
docs/: conf.py
mypypkg/: example.py
